--- a/Storytime/Storytime/Info.plist
+++ b/Storytime/Storytime/Info.plist
@@ -62,5 +62,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Mithella-Regular.otf</string>
+		<string>Mithella-Bold.otf</string>
+		<string>AUBREY1__.TTF</string>
+		<string>GiveMeTheScoop-Regular.otf</string>
+		<string>coolstory regular.ttf</string>
+	</array>
 </dict>
 </plist>
